code/python/OFDB/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# OFDB client library for Python

[![API Version](https://img.shields.io/badge/api-v3.0.0-blue)](https://developer.factset.com/api-catalog/ofdb-api)
[![PyPi](https://img.shields.io/pypi/v/fds.sdk.OFDB/0.1.0)](https://pypi.org/project/fds.sdk.OFDB/v/0.1.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

OFDB API

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.0.0
- SDK version: 0.1.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.OFDB==0.1.0
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.OFDB==0.1.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.10+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.10.0
      pyenv shell 3.10.0
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.OFDB
from fds.sdk.OFDB.api import audit_api
from fds.sdk.OFDB.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
#
# The confidential client instance should be reused in production environments.
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.OFDB.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.OFDB.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.OFDB.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = audit_api.AuditApi(api_client)
    database_path_root = DatabasePathRoot(
        data=DatabasePathRootData(
            database_path="Client:/Folder1/Database.OFDB",
        ),
    ) # DatabasePathRoot | The databasePath to be fetched (optional)

    try:
        # example passing only required values which don't have defaults set
        # and optional values
        api_response = api_instance.get_audit(database_path_root=database_path_root)

        pprint(api_response)
    except fds.sdk.OFDB.ApiException as e:
        print("Exception when calling AuditApi->get_audit: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     api_response, http_status_code, response_headers = api_instance.get_audit_with_http_info(database_path_root=database_path_root)


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.OFDB.ApiException as e:
    #     print("Exception when calling AuditApi->get_audit: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     async_result = api_instance.get_audit_async(database_path_root=database_path_root)
    #     api_response = async_result.get()


    #     pprint(api_response)
    # except fds.sdk.OFDB.ApiException as e:
    #     print("Exception when calling AuditApi->get_audit: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     async_result = api_instance.get_audit_with_http_info_async(database_path_root=database_path_root)
    #     api_response, http_status_code, response_headers = async_result.get()


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.OFDB.ApiException as e:
    #     print("Exception when calling AuditApi->get_audit: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.OFDB

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.OFDB.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.OFDB

configuration = fds.sdk.OFDB.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.OFDB

configuration = fds.sdk.OFDB.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```

### Request Retries

In case the request retry behaviour should be customized, it is possible to pass a `urllib3.Retry` object to the `retry` property of the Configuration.

```python
from urllib3 import Retry
import fds.sdk.OFDB

configuration = fds.sdk.OFDB.Configuration(
    # ...
)

configuration.retries = Retry(total=3, status_forcelist=[500, 502, 503, 504])
```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/analytics/ofdb/v3*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AuditApi* | [**get_audit**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/AuditApi.md#get_audit) | **POST** /database/audit/get | 
*AuditApi* | [**get_resource_get_audit**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/AuditApi.md#get_resource_get_audit) | **GET** /database/job/result/audit/get | 
*BulkDeleteApi* | [**delete_bulk_items**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/BulkDeleteApi.md#delete_bulk_items) | **POST** /database/bulk-delete | 
*BulkDeleteApi* | [**get_resource_delete_bulk_items**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/BulkDeleteApi.md#get_resource_delete_bulk_items) | **GET** /database/job/result/bulk-delete/get | 
*DataApi* | [**get_data**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/DataApi.md#get_data) | **POST** /database/data/get | 
*DataApi* | [**get_resource_get_data**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/DataApi.md#get_resource_get_data) | **GET** /database/job/result/data/get | 
*DatesApi* | [**get_dates**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/DatesApi.md#get_dates) | **POST** /database/dates/get | 
*DatesApi* | [**get_resource_get_dates**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/DatesApi.md#get_resource_get_dates) | **GET** /database/job/result/dates/get | 
*DatesApi* | [**replace_dates**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/DatesApi.md#replace_dates) | **POST** /database/dates/replace | 
*DatesApi* | [**update_dates**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/DatesApi.md#update_dates) | **POST** /database/dates/update | 
*JobStatusApi* | [**get_database_status_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/JobStatusApi.md#get_database_status_by_id) | **GET** /database/job/status/get | 
*SchemaApi* | [**add_fields**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/SchemaApi.md#add_fields) | **POST** /database/schema/add | 
*SchemaApi* | [**create_database**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/SchemaApi.md#create_database) | **POST** /database/schema/create | 
*SchemaApi* | [**get_fields**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/SchemaApi.md#get_fields) | **POST** /database/schema/get | 
*SchemaApi* | [**get_resource_get_fields**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/SchemaApi.md#get_resource_get_fields) | **GET** /database/job/result/schema/get | 
*StatsApi* | [**get_resource_get_stats**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/StatsApi.md#get_resource_get_stats) | **GET** /database/job/result/stats/get | 
*StatsApi* | [**get_stats**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/StatsApi.md#get_stats) | **POST** /database/stats/get | 
*SymbolsApi* | [**get_resource_get_symbols**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/SymbolsApi.md#get_resource_get_symbols) | **GET** /database/job/result/symbols/get | 
*SymbolsApi* | [**get_symbols**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/SymbolsApi.md#get_symbols) | **POST** /database/symbols/get | 
*SymbolsApi* | [**replace_symbols**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/SymbolsApi.md#replace_symbols) | **POST** /database/symbols/replace | 
*SymbolsApi* | [**update_symbols**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/SymbolsApi.md#update_symbols) | **POST** /database/symbols/update | 


## Documentation For Models

 - [AddDatesRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/AddDatesRoot.md)
 - [AddDatesRootData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/AddDatesRootData.md)
 - [AddFieldsRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/AddFieldsRoot.md)
 - [AddFieldsRootData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/AddFieldsRootData.md)
 - [AddSymbolsRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/AddSymbolsRoot.md)
 - [AddSymbolsRootData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/AddSymbolsRootData.md)
 - [BulkDeleteItemArray](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/BulkDeleteItemArray.md)
 - [BulkDeleteItemObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/BulkDeleteItemObject.md)
 - [BulkDeleteRespItem](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/BulkDeleteRespItem.md)
 - [BulkDeleteRespItemArray](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/BulkDeleteRespItemArray.md)
 - [BulkDeleteRespItemNested](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/BulkDeleteRespItemNested.md)
 - [BulkDeleteRespItemNestedArray](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/BulkDeleteRespItemNestedArray.md)
 - [BulkDeleteRespItemNestedObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/BulkDeleteRespItemNestedObject.md)
 - [BulkDeleteRespItemObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/BulkDeleteRespItemObject.md)
 - [BulkDeleteRespRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/BulkDeleteRespRoot.md)
 - [BulkDeleteRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/BulkDeleteRoot.md)
 - [BulkDeleteRootData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/BulkDeleteRootData.md)
 - [CreateDatabaseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/CreateDatabaseRoot.md)
 - [CreateDatabaseRootData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/CreateDatabaseRootData.md)
 - [DataValue](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/DataValue.md)
 - [DatabasePathRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/DatabasePathRoot.md)
 - [DatabasePathRootData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/DatabasePathRootData.md)
 - [DateAndContentArray](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/DateAndContentArray.md)
 - [DateAndContentObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/DateAndContentObject.md)
 - [DateAndFieldsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/DateAndFieldsObject.md)
 - [DatesArray](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/DatesArray.md)
 - [ErrorObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/ErrorObject.md)
 - [ErrorObjectWithSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/ErrorObjectWithSource.md)
 - [ErrorObjectWithSourceSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/ErrorObjectWithSourceSource.md)
 - [FieldObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/FieldObject.md)
 - [FieldsArray](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/FieldsArray.md)
 - [InlineResponse200](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/InlineResponse200.md)
 - [InlineResponse2001](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/InlineResponse2001.md)
 - [InlineResponse2001Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/InlineResponse2001Data.md)
 - [InlineResponse2002](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/InlineResponse2002.md)
 - [InlineResponse2003](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/InlineResponse2003.md)
 - [InlineResponse2004](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/InlineResponse2004.md)
 - [InlineResponse2005](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/InlineResponse2005.md)
 - [InlineResponse2006](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/InlineResponse2006.md)
 - [InlineResponse200Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/InlineResponse200Data.md)
 - [InlineResponse201](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/InlineResponse201.md)
 - [InlineResponse201Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/InlineResponse201Data.md)
 - [InlineResponse400](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/InlineResponse400.md)
 - [InlineResponse403](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/InlineResponse403.md)
 - [SymbolAndContentArray](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/SymbolAndContentArray.md)
 - [SymbolAndContentObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/SymbolAndContentObject.md)
 - [SymbolAndFieldsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/SymbolAndFieldsObject.md)
 - [SymbolsArray](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/SymbolsArray.md)
 - [UpdateDatesRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/UpdateDatesRoot.md)
 - [UpdateSymbolsRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v3/docs/UpdateSymbolsRoot.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.OFDB.apis and fds.sdk.OFDB.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.OFDB.api.default_api import DefaultApi`
- `from fds.sdk.OFDB.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.OFDB
from fds.sdk.OFDB.apis import *
from fds.sdk.OFDB.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

